# CoreContracts

./: Cargo.toml  README.md
.github/workflows/: audit.yml  basic.yml  codecov.yml
contracts/mpc1-multisig/: Cargo.toml
contracts/mpc1-multisig/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/mpc1155/: Cargo.toml  README.md
contracts/mpc1155/src/: actions.rs  contract.rs  state.rs  tests.rs
contracts/mpc20/: Cargo.toml  README.md
contracts/mpc20-staking/: Cargo.toml  README.md
contracts/mpc20-staking/.cargo/: config
contracts/mpc20-staking/src/: actions.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/mpc20/src/: actions.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/mpc721/: Cargo.toml  README.md
contracts/mpc721/src/: actions.rs  contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/token-sale/: Cargo.toml
contracts/token-sale/src/: contract.rs  lib.rs  state.rs
sdk/create_type_spec_derive/: Cargo.toml
sdk/create_type_spec_derive/src/: lib.rs
sdk/derive_commons/: Cargo.toml
sdk/derive_commons/src/: lib.rs
sdk/pbc_contract_codegen/: Cargo.toml
sdk/pbc_contract_codegen/src/: action_macro.rs  callback_macro.rs  init_macro.rs  lib.rs  macro_abi.rs  state_macro.rs  tokenized.rs  version.rs  zk_macro.rs
sdk/pbc_contract_common/: Cargo.toml
sdk/pbc_contract_common/src/: address.rs  context.rs  events.rs  function_name.rs  lib.rs  raw_ptr.rs  test_examples.rs
sdk/pbc_contract_common/src/abi/: contract.rs  func.rs  generate.rs  mod.rs  named_entity.rs  types.rs
sdk/pbc_contract_common/src/zk/: mod.rs
sdk/pbc_external/: Cargo.toml
sdk/pbc_external/src/: lib.rs
sdk/pbc_lib/: Cargo.toml
sdk/pbc_lib/src/: lib.rs  wasm_exit.rs  wasm_mem.rs
sdk/pbc_traits/: Cargo.toml
sdk/pbc_traits/src/: create_type_spec.rs  lib.rs  read_int.rs  readwrite_rpc.rs  readwrite_state.rs  write_int.rs
sdk/read_write_rpc_derive/: Cargo.toml
sdk/read_write_rpc_derive/src/: lib.rs
sdk/read_write_state_derive/: Cargo.toml
sdk/read_write_state_derive/src/: lib.rs
