[package]
name = "mpc20-staking"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.partisiablockchain]
cargo-partisia = "0.2.9"

[dependencies]
pbc_contract_common = { path = "../../sdk/pbc_contract_common" }
pbc_contract_codegen = { path = "../../sdk/pbc_contract_codegen" }
pbc_traits = { path = "../../sdk/pbc_traits" }
pbc_lib = { path = "../../sdk/pbc_lib" }
read_write_rpc_derive = { path = "../../sdk/read_write_rpc_derive" }
read_write_state_derive = { path = "../../sdk/read_write_state_derive" }
create_type_spec_derive = { path = "../../sdk/create_type_spec_derive" }
utils = { path = "../../packages/utils" }
mpc20 = { path = "../mpc20" }

serde_json = "1.0"
thiserror = "1.0.31"
rust_decimal = "1.21.0"

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi"]
